--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>ru.sergeysjob.ObjectOrientedDemo</mainClass>
+                            <mainClass>ru.sergeysjob.Main</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
